@@ -64,7 +64,7 @@ public class ExpressionDialog extends JDialog {
             public void actionPerformed(ActionEvent e) {
                 try {
                     ArrayList<Expression> expList = new Parser(text.getText()).parse();
-                    CircuitBuilder circuitBuilder = new CircuitBuilder(shapeFactory, false);
+                    CircuitBuilder circuitBuilder = new CircuitBuilder(shapeFactory);
                     if (expList.size() == 1)
                         circuitBuilder.addCombinatorial("Y", expList.get(0));
                     else
